Etapa2/y.output
   0  $accept : programa $end

   1  programa : listaDeDeclaracoes

   2  listaDeDeclaracoes : declaracoes listaDeDeclaracoes
   3                     |

   4  declaracoes : tipo TK_IDENTIFIER '=' literal ';'
   5              | tipo TK_IDENTIFIER '[' LIT_INTEGER ']' inicializacao ';'
   6              | tipo '#' TK_IDENTIFIER ';'
   7              | tipo '#' TK_IDENTIFIER '=' literal ';'
   8              | tipo TK_IDENTIFIER '(' listaDeParametros ')' bloco

   9  inicializacao : ':' inicializacao2
  10                |

  11  inicializacao2 : literal inicializacao2
  12                 |

  13  tipo : KW_CHAR
  14       | KW_INT
  15       | KW_FLOAT

  16  literal : LIT_CHAR
  17          | LIT_INTEGER
  18          | LIT_REAL
  19          | LIT_STRING

  20  listaDeParametros : parametro fimDeParametros
  21                    |

  22  fimDeParametros : ',' parametro fimDeParametros
  23                  |

  24  parametro : tipo TK_IDENTIFIER
  25            |

  26  bloco : '{' blocoDeComandos '}'

  27  blocoDeComandos : comando fimDeComando

  28  fimDeComando : ';' comando fimDeComando
  29               |

  30  comando : atribuicao
  31          | controleFluxo
  32          | KW_PRINT argprint
  33          | KW_READ TK_IDENTIFIER
  34          | bloco
  35          | KW_RETURN expressao
  36          |

  37  atribuicao : TK_IDENTIFIER '=' expressao
  38             | '#' TK_IDENTIFIER '=' expressao
  39             | OPERATOR_AND TK_IDENTIFIER '=' expressao
  40             | TK_IDENTIFIER '[' expressao ']' '=' expressao

  41  argprint : LIT_STRING argprint
  42           | argprint LIT_STRING
  43           | LIT_STRING
  44           | expressao

  45  listaDeArgumentos : argfunc fimDeArgumentos
  46                    |

  47  fimDeArgumentos : ',' argfunc fimDeArgumentos
  48                  |

  49  argfunc : expressao
  50          |

  51  expressao : TK_IDENTIFIER
  52            | '#' TK_IDENTIFIER
  53            | '&' TK_IDENTIFIER
  54            | TK_IDENTIFIER '[' expressao ']'
  55            | TK_IDENTIFIER '(' listaDeArgumentos ')'
  56            | '(' expressao ')'
  57            | expressao op expressao
  58            | LIT_CHAR
  59            | LIT_INTEGER
  60            | LIT_STRING

  61  op : OPERATOR_LE
  62     | OPERATOR_GE
  63     | OPERATOR_EQ
  64     | OPERATOR_NE
  65     | OPERATOR_AND
  66     | OPERATOR_OR
  67     | '>'
  68     | '<'
  69     | '+'
  70     | '-'
  71     | '/'
  72     | '*'
  73     | '%'
  74     | '!'

  75  controleFluxo : KW_IF '(' expressao ')' KW_THEN comando
  76                | KW_IF '(' expressao ')' KW_THEN comando KW_ELSE comando
  77                | KW_WHILE '(' expressao ')' comando
  78                | KW_FOR '(' atribuicao KW_TO expressao ')' comando

state 0
	$accept : . programa $end  (0)
	listaDeDeclaracoes : .  (3)

	KW_CHAR  shift 1
	KW_INT  shift 2
	KW_FLOAT  shift 3
	$end  reduce 3

	programa  goto 4
	listaDeDeclaracoes  goto 5
	declaracoes  goto 6
	tipo  goto 7


state 1
	tipo : KW_CHAR .  (13)

	.  reduce 13


state 2
	tipo : KW_INT .  (14)

	.  reduce 14


state 3
	tipo : KW_FLOAT .  (15)

	.  reduce 15


state 4
	$accept : programa . $end  (0)

	$end  accept


state 5
	programa : listaDeDeclaracoes .  (1)

	.  reduce 1


state 6
	listaDeDeclaracoes : declaracoes . listaDeDeclaracoes  (2)
	listaDeDeclaracoes : .  (3)

	KW_CHAR  shift 1
	KW_INT  shift 2
	KW_FLOAT  shift 3
	$end  reduce 3

	listaDeDeclaracoes  goto 8
	declaracoes  goto 6
	tipo  goto 7


state 7
	declaracoes : tipo . TK_IDENTIFIER '=' literal ';'  (4)
	declaracoes : tipo . TK_IDENTIFIER '[' LIT_INTEGER ']' inicializacao ';'  (5)
	declaracoes : tipo . '#' TK_IDENTIFIER ';'  (6)
	declaracoes : tipo . '#' TK_IDENTIFIER '=' literal ';'  (7)
	declaracoes : tipo . TK_IDENTIFIER '(' listaDeParametros ')' bloco  (8)

	TK_IDENTIFIER  shift 9
	'#'  shift 10
	.  error


state 8
	listaDeDeclaracoes : declaracoes listaDeDeclaracoes .  (2)

	.  reduce 2


state 9
	declaracoes : tipo TK_IDENTIFIER . '=' literal ';'  (4)
	declaracoes : tipo TK_IDENTIFIER . '[' LIT_INTEGER ']' inicializacao ';'  (5)
	declaracoes : tipo TK_IDENTIFIER . '(' listaDeParametros ')' bloco  (8)

	'='  shift 11
	'['  shift 12
	'('  shift 13
	.  error


state 10
	declaracoes : tipo '#' . TK_IDENTIFIER ';'  (6)
	declaracoes : tipo '#' . TK_IDENTIFIER '=' literal ';'  (7)

	TK_IDENTIFIER  shift 14
	.  error


state 11
	declaracoes : tipo TK_IDENTIFIER '=' . literal ';'  (4)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	.  error

	literal  goto 19


state 12
	declaracoes : tipo TK_IDENTIFIER '[' . LIT_INTEGER ']' inicializacao ';'  (5)

	LIT_INTEGER  shift 20
	.  error


13: reduce/reduce conflict (reduce 21, reduce 25) on ')'
state 13
	declaracoes : tipo TK_IDENTIFIER '(' . listaDeParametros ')' bloco  (8)
	listaDeParametros : .  (21)
	parametro : .  (25)

	KW_CHAR  shift 1
	KW_INT  shift 2
	KW_FLOAT  shift 3
	')'  reduce 21
	','  reduce 25

	tipo  goto 21
	listaDeParametros  goto 22
	parametro  goto 23


state 14
	declaracoes : tipo '#' TK_IDENTIFIER . ';'  (6)
	declaracoes : tipo '#' TK_IDENTIFIER . '=' literal ';'  (7)

	'='  shift 24
	';'  shift 25
	.  error


state 15
	literal : LIT_INTEGER .  (17)

	.  reduce 17


state 16
	literal : LIT_REAL .  (18)

	.  reduce 18


state 17
	literal : LIT_CHAR .  (16)

	.  reduce 16


state 18
	literal : LIT_STRING .  (19)

	.  reduce 19


state 19
	declaracoes : tipo TK_IDENTIFIER '=' literal . ';'  (4)

	';'  shift 26
	.  error


state 20
	declaracoes : tipo TK_IDENTIFIER '[' LIT_INTEGER . ']' inicializacao ';'  (5)

	']'  shift 27
	.  error


state 21
	parametro : tipo . TK_IDENTIFIER  (24)

	TK_IDENTIFIER  shift 28
	.  error


state 22
	declaracoes : tipo TK_IDENTIFIER '(' listaDeParametros . ')' bloco  (8)

	')'  shift 29
	.  error


state 23
	listaDeParametros : parametro . fimDeParametros  (20)
	fimDeParametros : .  (23)

	','  shift 30
	')'  reduce 23

	fimDeParametros  goto 31


state 24
	declaracoes : tipo '#' TK_IDENTIFIER '=' . literal ';'  (7)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	.  error

	literal  goto 32


state 25
	declaracoes : tipo '#' TK_IDENTIFIER ';' .  (6)

	.  reduce 6


state 26
	declaracoes : tipo TK_IDENTIFIER '=' literal ';' .  (4)

	.  reduce 4


state 27
	declaracoes : tipo TK_IDENTIFIER '[' LIT_INTEGER ']' . inicializacao ';'  (5)
	inicializacao : .  (10)

	':'  shift 33
	';'  reduce 10

	inicializacao  goto 34


state 28
	parametro : tipo TK_IDENTIFIER .  (24)

	.  reduce 24


state 29
	declaracoes : tipo TK_IDENTIFIER '(' listaDeParametros ')' . bloco  (8)

	'{'  shift 35
	.  error

	bloco  goto 36


state 30
	fimDeParametros : ',' . parametro fimDeParametros  (22)
	parametro : .  (25)

	KW_CHAR  shift 1
	KW_INT  shift 2
	KW_FLOAT  shift 3
	')'  reduce 25
	','  reduce 25

	tipo  goto 21
	parametro  goto 37


state 31
	listaDeParametros : parametro fimDeParametros .  (20)

	.  reduce 20


state 32
	declaracoes : tipo '#' TK_IDENTIFIER '=' literal . ';'  (7)

	';'  shift 38
	.  error


state 33
	inicializacao : ':' . inicializacao2  (9)
	inicializacao2 : .  (12)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	';'  reduce 12

	literal  goto 39
	inicializacao2  goto 40


state 34
	declaracoes : tipo TK_IDENTIFIER '[' LIT_INTEGER ']' inicializacao . ';'  (5)

	';'  shift 41
	.  error


state 35
	bloco : '{' . blocoDeComandos '}'  (26)
	comando : .  (36)

	KW_IF  shift 42
	KW_WHILE  shift 43
	KW_FOR  shift 44
	KW_READ  shift 45
	KW_PRINT  shift 46
	KW_RETURN  shift 47
	OPERATOR_AND  shift 48
	TK_IDENTIFIER  shift 49
	'#'  shift 50
	'{'  shift 35
	';'  reduce 36
	'}'  reduce 36

	bloco  goto 51
	blocoDeComandos  goto 52
	comando  goto 53
	atribuicao  goto 54
	controleFluxo  goto 55


state 36
	declaracoes : tipo TK_IDENTIFIER '(' listaDeParametros ')' bloco .  (8)

	.  reduce 8


state 37
	fimDeParametros : ',' parametro . fimDeParametros  (22)
	fimDeParametros : .  (23)

	','  shift 30
	')'  reduce 23

	fimDeParametros  goto 56


state 38
	declaracoes : tipo '#' TK_IDENTIFIER '=' literal ';' .  (7)

	.  reduce 7


state 39
	inicializacao2 : literal . inicializacao2  (11)
	inicializacao2 : .  (12)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	';'  reduce 12

	literal  goto 39
	inicializacao2  goto 57


state 40
	inicializacao : ':' inicializacao2 .  (9)

	.  reduce 9


state 41
	declaracoes : tipo TK_IDENTIFIER '[' LIT_INTEGER ']' inicializacao ';' .  (5)

	.  reduce 5


state 42
	controleFluxo : KW_IF . '(' expressao ')' KW_THEN comando  (75)
	controleFluxo : KW_IF . '(' expressao ')' KW_THEN comando KW_ELSE comando  (76)

	'('  shift 58
	.  error


state 43
	controleFluxo : KW_WHILE . '(' expressao ')' comando  (77)

	'('  shift 59
	.  error


state 44
	controleFluxo : KW_FOR . '(' atribuicao KW_TO expressao ')' comando  (78)

	'('  shift 60
	.  error


state 45
	comando : KW_READ . TK_IDENTIFIER  (33)

	TK_IDENTIFIER  shift 61
	.  error


state 46
	comando : KW_PRINT . argprint  (32)

	TK_IDENTIFIER  shift 62
	LIT_INTEGER  shift 63
	LIT_CHAR  shift 64
	LIT_STRING  shift 65
	'#'  shift 66
	'('  shift 67
	'&'  shift 68
	.  error

	argprint  goto 69
	expressao  goto 70


state 47
	comando : KW_RETURN . expressao  (35)

	TK_IDENTIFIER  shift 62
	LIT_INTEGER  shift 63
	LIT_CHAR  shift 64
	LIT_STRING  shift 71
	'#'  shift 66
	'('  shift 67
	'&'  shift 68
	.  error

	expressao  goto 72


state 48
	atribuicao : OPERATOR_AND . TK_IDENTIFIER '=' expressao  (39)

	TK_IDENTIFIER  shift 73
	.  error


state 49
	atribuicao : TK_IDENTIFIER . '=' expressao  (37)
	atribuicao : TK_IDENTIFIER . '[' expressao ']' '=' expressao  (40)

	'='  shift 74
	'['  shift 75
	.  error


state 50
	atribuicao : '#' . TK_IDENTIFIER '=' expressao  (38)

	TK_IDENTIFIER  shift 76
	.  error


state 51
	comando : bloco .  (34)

	.  reduce 34


state 52
	bloco : '{' blocoDeComandos . '}'  (26)

	'}'  shift 77
	.  error


state 53
	blocoDeComandos : comando . fimDeComando  (27)
	fimDeComando : .  (29)

	';'  shift 78
	'}'  reduce 29

	fimDeComando  goto 79


state 54
	comando : atribuicao .  (30)

	.  reduce 30


state 55
	comando : controleFluxo .  (31)

	.  reduce 31


state 56
	fimDeParametros : ',' parametro fimDeParametros .  (22)

	.  reduce 22


state 57
	inicializacao2 : literal inicializacao2 .  (11)

	.  reduce 11


state 58
	controleFluxo : KW_IF '(' . expressao ')' KW_THEN comando  (75)
	controleFluxo : KW_IF '(' . expressao ')' KW_THEN comando KW_ELSE comando  (76)

	TK_IDENTIFIER  shift 62
	LIT_INTEGER  shift 63
	LIT_CHAR  shift 64
	LIT_STRING  shift 71
	'#'  shift 66
	'('  shift 67
	'&'  shift 68
	.  error

	expressao  goto 80


state 59
	controleFluxo : KW_WHILE '(' . expressao ')' comando  (77)

	TK_IDENTIFIER  shift 62
	LIT_INTEGER  shift 63
	LIT_CHAR  shift 64
	LIT_STRING  shift 71
	'#'  shift 66
	'('  shift 67
	'&'  shift 68
	.  error

	expressao  goto 81


state 60
	controleFluxo : KW_FOR '(' . atribuicao KW_TO expressao ')' comando  (78)

	OPERATOR_AND  shift 48
	TK_IDENTIFIER  shift 49
	'#'  shift 50
	.  error

	atribuicao  goto 82


state 61
	comando : KW_READ TK_IDENTIFIER .  (33)

	.  reduce 33


state 62
	expressao : TK_IDENTIFIER .  (51)
	expressao : TK_IDENTIFIER . '[' expressao ']'  (54)
	expressao : TK_IDENTIFIER . '(' listaDeArgumentos ')'  (55)

	'['  shift 83
	'('  shift 84
	KW_ELSE  reduce 51
	KW_TO  reduce 51
	OPERATOR_LE  reduce 51
	OPERATOR_GE  reduce 51
	OPERATOR_EQ  reduce 51
	OPERATOR_NE  reduce 51
	OPERATOR_AND  reduce 51
	OPERATOR_OR  reduce 51
	LIT_STRING  reduce 51
	'<'  reduce 51
	'>'  reduce 51
	'!'  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	'*'  reduce 51
	'/'  reduce 51
	';'  reduce 51
	']'  reduce 51
	')'  reduce 51
	','  reduce 51
	'}'  reduce 51
	'%'  reduce 51


state 63
	expressao : LIT_INTEGER .  (59)

	.  reduce 59


state 64
	expressao : LIT_CHAR .  (58)

	.  reduce 58


65: reduce/reduce conflict (reduce 43, reduce 60) on KW_ELSE
65: shift/reduce conflict (shift 65, reduce 43) on LIT_STRING
65: shift/reduce conflict (shift 65, reduce 60) on LIT_STRING
65: reduce/reduce conflict (reduce 43, reduce 60) on ';'
65: reduce/reduce conflict (reduce 43, reduce 60) on '}'
state 65
	argprint : LIT_STRING . argprint  (41)
	argprint : LIT_STRING .  (43)
	expressao : LIT_STRING .  (60)

	TK_IDENTIFIER  shift 62
	LIT_INTEGER  shift 63
	LIT_CHAR  shift 64
	LIT_STRING  shift 65
	'#'  shift 66
	'('  shift 67
	'&'  shift 68
	KW_ELSE  reduce 43
	OPERATOR_LE  reduce 60
	OPERATOR_GE  reduce 60
	OPERATOR_EQ  reduce 60
	OPERATOR_NE  reduce 60
	OPERATOR_AND  reduce 60
	OPERATOR_OR  reduce 60
	'<'  reduce 60
	'>'  reduce 60
	'!'  reduce 60
	'+'  reduce 60
	'-'  reduce 60
	'*'  reduce 60
	'/'  reduce 60
	';'  reduce 43
	'}'  reduce 43
	'%'  reduce 60

	argprint  goto 85
	expressao  goto 70


state 66
	expressao : '#' . TK_IDENTIFIER  (52)

	TK_IDENTIFIER  shift 86
	.  error


state 67
	expressao : '(' . expressao ')'  (56)

	TK_IDENTIFIER  shift 62
	LIT_INTEGER  shift 63
	LIT_CHAR  shift 64
	LIT_STRING  shift 71
	'#'  shift 66
	'('  shift 67
	'&'  shift 68
	.  error

	expressao  goto 87


state 68
	expressao : '&' . TK_IDENTIFIER  (53)

	TK_IDENTIFIER  shift 88
	.  error


state 69
	comando : KW_PRINT argprint .  (32)
	argprint : argprint . LIT_STRING  (42)

	LIT_STRING  shift 89
	KW_ELSE  reduce 32
	';'  reduce 32
	'}'  reduce 32


state 70
	argprint : expressao .  (44)
	expressao : expressao . op expressao  (57)

	OPERATOR_LE  shift 90
	OPERATOR_GE  shift 91
	OPERATOR_EQ  shift 92
	OPERATOR_NE  shift 93
	OPERATOR_AND  shift 94
	OPERATOR_OR  shift 95
	'<'  shift 96
	'>'  shift 97
	'!'  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'%'  shift 103
	KW_ELSE  reduce 44
	LIT_STRING  reduce 44
	';'  reduce 44
	'}'  reduce 44

	op  goto 104


state 71
	expressao : LIT_STRING .  (60)

	.  reduce 60


state 72
	comando : KW_RETURN expressao .  (35)
	expressao : expressao . op expressao  (57)

	OPERATOR_LE  shift 90
	OPERATOR_GE  shift 91
	OPERATOR_EQ  shift 92
	OPERATOR_NE  shift 93
	OPERATOR_AND  shift 94
	OPERATOR_OR  shift 95
	'<'  shift 96
	'>'  shift 97
	'!'  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'%'  shift 103
	KW_ELSE  reduce 35
	';'  reduce 35
	'}'  reduce 35

	op  goto 104


state 73
	atribuicao : OPERATOR_AND TK_IDENTIFIER . '=' expressao  (39)

	'='  shift 105
	.  error


state 74
	atribuicao : TK_IDENTIFIER '=' . expressao  (37)

	TK_IDENTIFIER  shift 62
	LIT_INTEGER  shift 63
	LIT_CHAR  shift 64
	LIT_STRING  shift 71
	'#'  shift 66
	'('  shift 67
	'&'  shift 68
	.  error

	expressao  goto 106


state 75
	atribuicao : TK_IDENTIFIER '[' . expressao ']' '=' expressao  (40)

	TK_IDENTIFIER  shift 62
	LIT_INTEGER  shift 63
	LIT_CHAR  shift 64
	LIT_STRING  shift 71
	'#'  shift 66
	'('  shift 67
	'&'  shift 68
	.  error

	expressao  goto 107


state 76
	atribuicao : '#' TK_IDENTIFIER . '=' expressao  (38)

	'='  shift 108
	.  error


state 77
	bloco : '{' blocoDeComandos '}' .  (26)

	.  reduce 26


state 78
	fimDeComando : ';' . comando fimDeComando  (28)
	comando : .  (36)

	KW_IF  shift 42
	KW_WHILE  shift 43
	KW_FOR  shift 44
	KW_READ  shift 45
	KW_PRINT  shift 46
	KW_RETURN  shift 47
	OPERATOR_AND  shift 48
	TK_IDENTIFIER  shift 49
	'#'  shift 50
	'{'  shift 35
	';'  reduce 36
	'}'  reduce 36

	bloco  goto 51
	comando  goto 109
	atribuicao  goto 54
	controleFluxo  goto 55


state 79
	blocoDeComandos : comando fimDeComando .  (27)

	.  reduce 27


state 80
	expressao : expressao . op expressao  (57)
	controleFluxo : KW_IF '(' expressao . ')' KW_THEN comando  (75)
	controleFluxo : KW_IF '(' expressao . ')' KW_THEN comando KW_ELSE comando  (76)

	OPERATOR_LE  shift 90
	OPERATOR_GE  shift 91
	OPERATOR_EQ  shift 92
	OPERATOR_NE  shift 93
	OPERATOR_AND  shift 94
	OPERATOR_OR  shift 95
	'<'  shift 96
	'>'  shift 97
	'!'  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	')'  shift 110
	'%'  shift 103
	.  error

	op  goto 104


state 81
	expressao : expressao . op expressao  (57)
	controleFluxo : KW_WHILE '(' expressao . ')' comando  (77)

	OPERATOR_LE  shift 90
	OPERATOR_GE  shift 91
	OPERATOR_EQ  shift 92
	OPERATOR_NE  shift 93
	OPERATOR_AND  shift 94
	OPERATOR_OR  shift 95
	'<'  shift 96
	'>'  shift 97
	'!'  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	')'  shift 111
	'%'  shift 103
	.  error

	op  goto 104


state 82
	controleFluxo : KW_FOR '(' atribuicao . KW_TO expressao ')' comando  (78)

	KW_TO  shift 112
	.  error


state 83
	expressao : TK_IDENTIFIER '[' . expressao ']'  (54)

	TK_IDENTIFIER  shift 62
	LIT_INTEGER  shift 63
	LIT_CHAR  shift 64
	LIT_STRING  shift 71
	'#'  shift 66
	'('  shift 67
	'&'  shift 68
	.  error

	expressao  goto 113


84: reduce/reduce conflict (reduce 46, reduce 50) on ')'
state 84
	expressao : TK_IDENTIFIER '(' . listaDeArgumentos ')'  (55)
	listaDeArgumentos : .  (46)
	argfunc : .  (50)

	TK_IDENTIFIER  shift 62
	LIT_INTEGER  shift 63
	LIT_CHAR  shift 64
	LIT_STRING  shift 71
	'#'  shift 66
	'('  shift 67
	'&'  shift 68
	')'  reduce 46
	','  reduce 50

	expressao  goto 114
	listaDeArgumentos  goto 115
	argfunc  goto 116


85: shift/reduce conflict (shift 89, reduce 41) on LIT_STRING
state 85
	argprint : LIT_STRING argprint .  (41)
	argprint : argprint . LIT_STRING  (42)

	LIT_STRING  shift 89
	KW_ELSE  reduce 41
	';'  reduce 41
	'}'  reduce 41


state 86
	expressao : '#' TK_IDENTIFIER .  (52)

	.  reduce 52


state 87
	expressao : '(' expressao . ')'  (56)
	expressao : expressao . op expressao  (57)

	OPERATOR_LE  shift 90
	OPERATOR_GE  shift 91
	OPERATOR_EQ  shift 92
	OPERATOR_NE  shift 93
	OPERATOR_AND  shift 94
	OPERATOR_OR  shift 95
	'<'  shift 96
	'>'  shift 97
	'!'  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	')'  shift 117
	'%'  shift 103
	.  error

	op  goto 104


state 88
	expressao : '&' TK_IDENTIFIER .  (53)

	.  reduce 53


state 89
	argprint : argprint LIT_STRING .  (42)

	.  reduce 42


state 90
	op : OPERATOR_LE .  (61)

	.  reduce 61


state 91
	op : OPERATOR_GE .  (62)

	.  reduce 62


state 92
	op : OPERATOR_EQ .  (63)
